# leetcode

./: CMakeLists.txt  go.mod
1.two-sum/: CMakeLists.txt  main.cpp
102.binary-tree-level-order-traversal/: task.py
103.zigzag-level-order-traversal/: CMakeLists.txt  main.cpp
104.maximum-depth-of-binary-tree/: CMakeLists.txt  main.cpp
105.construct-binary-tree/: task.py
1091.shortest-path-in-binary-matrix/: README.md  task.py
11.container-with-most-water/: README.md  task.py
11.roman-to-integer/: task.py
111.minimum-depth-of-binary-tree/: CMakeLists.txt  main.cpp
112.813-insert-delete-random/: README.md
112.path-sum/: CMakeLists.txt  main.cpp
1249.min-remove-to-make-valid-parenthesis/: REAME.md  task.py
127.word-ladder/: task.py
129.sum-root-to-leaf-numbers/: CMakeLists.txt  main.cpp
1337.k-weakest-rows/: README.md  task.py
1342.reduce-num-to-zero/: README.md
138.copy-list-with-random-pointer/: README.md  task.py
141.linked-list-cycle/: README.md  task.py
1447.simplified-fractions/: task.py
15.3sum/: README.md  task.py
1665.minimum-initial-energy-to-finish-tasks/: task.py
19.remove-nth-node-from-end-of-list/: task.py
191.number-of-one-bits/: README.md  task.py
199.binary-tree-right-side-view/: README.md  task.py
2.add-two-numbers/: CMakeLists.txt  main.cpp
20.valid-parentheses/: task.py
202.happy-number/: README.md  task.py
21.merge-two-sorted-lists/: leetcodetask.go
23.merge-k-sorted-lists/: task.py
238.product-of-array-except-self/: CMakeLists.txt  main.cpp
242.valid-anagram/: task.py
38.count-and-say/: task.py
(+50 files in other folders)
