cmake_minimum_required (VERSION 3.15.5)
project (LEETCODE)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory (1.two-sum)
add_subdirectory (2.add-two-numbers)
add_subdirectory (103.zigzag-level-order-traversal)
add_subdirectory (104.maximum-depth-of-binary-tree)
add_subdirectory (238.product-of-array-except-self)
add_subdirectory (129.sum-root-to-leaf-numbers)
add_subdirectory (112.path-sum)
